edited bullet points

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       color: hsl(45, 100%, 72%);
     }
   </style> -->
+
+  <style>
+    ul {
+      list-style-type: disc; /* Ensures bullet points */
+      padding-left: 20px;    /* Adds indentation for bullets */
+    }
+  </style>
 </head>
 
 <body>
@@ -824,12 +831,11 @@
           I developed and assembled a quadcopter with brushless motors using Linux on Raspberry Pi.
           The quadcopter streamed real-time IMU data (from Arduino via I2C), GPS, and webcam video via WiFi from Raspberry Pi to web server.
         </section>
-        <br>
         <span>
           <img src="./assets/images/project-copter.jpg" alt="copter_1" style="width:300px; display: inline-block; margin-right: 10px;">
           <img src="./assets/images/project-copter2.jpg" alt="copter_2" style="width:300px; display: inline-block;">
         </span>
-
+        <br>
         <section class="about-text">
           Example of the real-time IMU data on the web server
         </section>
@@ -887,7 +893,7 @@
 
         <section>
 
-          <h4 class="h3 proj-skills-item-title">Rules of Game</h3>
+          <h3 class="h3 proj-skills-item-title">Rules of Game</h3>
           
           <section class="about-text">
           Each player has a mana level from 0-5, which is divided into tiers:
@@ -912,7 +918,7 @@
           </section>
           
           <p>
-            <h4 class="h4 proj-skills-item-title">Design</h4>
+            <h3 class="h3 proj-skills-item-title">Design</h3>
             <section class="about-text">
                 The circuit consists of flip-flops, combinatorial logic, MUX, decoder, counter, timer chip,
                 7-segment displays for timer and mana levels, buttons for 3 actions, and reset button
