tried to fix back button

--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <span>
-              <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
-              <h5>Back to Projects</h5>
+              <ion-icon name="arrow-back-outline" style="font-size:24px;"></ion-icon>
+              <h4>Back to Projects</h4>
             </span>
             
           </a>
