tried to fix back button again

--- a/index.html
+++ b/index.html
@@ -533,6 +533,24 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="2023">
+              <a data-nav-link data-target="proj-biogaming">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-biogaming1.png" alt="biogaming" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Biogaming Controller</h3>
+
+                <p class="project-category">A gaming interface capable of controlling keyboard and mouse using head and foot tracking </p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="2023">
               <a data-nav-link data-target="proj-epiguard">
 
                 <figure class="project-img">
@@ -550,23 +568,6 @@
               </a>
             </li>
         
-            <li class="project-item  active" data-filter-item data-category="2023">
-              <a data-nav-link data-target="proj-biogaming">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Biogaming Controller</h3>
-
-                <p class="project-category">A gaming interface capable of controlling keyboard and mouse using head and foot tracking </p>
-
-              </a>
-            </li>
 
             <!-- <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
@@ -656,8 +657,8 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <span>
-              <ion-icon name="arrow-back-outline" style="font-size:24px;"></ion-icon>
-              <h4>Back to Projects</h4>
+              <ion-icon name="arrow-back-outline" style="font-size:30px;"></ion-icon>
+              <h4 style="display:inline-block; margin-left:10px;">Back to Projects</h4>
             </span>
             
           </a>
