fixed biogaming thumbnail

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-biogaming1.png" alt="biogaming" loading="lazy">
+                  <img src="./assets/images/project-biogaming1.jng" alt="biogaming" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Biogaming Controller</h3>
