edited back button

--- a/index.html
+++ b/index.html
@@ -656,10 +656,11 @@
 
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
-            <span>
-              <ion-icon name="arrow-back-outline" style="font-size:30px;"></ion-icon>
-              <h4 style="display:inline-block; margin-left:10px;">Back to Projects</h4>
-            </span>
+            <ion-item>
+              <ion-label position="floating"><ion-icon name="arrow-back-outline"></ion-icon> Back to Projects</ion-label>
+            </ion-item>
+            <!-- <ion-icon name="arrow-back-outline" style="font-size:30px;"></ion-icon>
+            <h4 style="display:inline-block; margin-left:10px;">Back to Projects</h4> -->
             
           </a>
           <h2 class="h2 article-title">SensoPatch</h2>
