--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-egc2.png" alt="egc_2" loading="lazy">
+                  <img src="./assets/images/project-egc2.jpg" alt="egc_2" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">ECG Circuit</h3>
@@ -925,12 +925,15 @@
                 7-segment displays for timer and mana levels, buttons for 3 actions, and reset button.
                 <p>
                   Circuit Simulation
+                  <br>
                   <img src="./assets/images/project-wizard2.jpg" alt="wizard_2" style="width:200px;">
                   <br>
                   Circuit wiring
+                  <br>
                   <img src="./assets/images/project-wizard3.jpg" alt="wizard_3" style="width:500px;">
                   <br>
                   Finished product!
+                  <br>
                   <img src="./assets/images/project-wizard.jpg" alt="wizard_1" style="width:500px;">
                   <br>
                   <img src="./assets/images/project-wizard4.jpg" alt="wizard_4" style="width:500px;">
@@ -1084,6 +1087,7 @@
           The headband features an IMU and pressure sensor. IMU data is used to control either 2-axis movement or 2-axis camera view (WASD keys) and sprint option (ctrl key).
           Blowing or sucking into the tube connected to pressure sensor simulates right and left mouse click. To toggle between using the IMU as
           movement mode or camera view mode, apply the maximum pressure to the tube.
+          <br>
           <p>
           <span>
             <img src="./assets/images/project-biogaming2.jpg" alt="biogaming_2" style="width:250px; display: inline-block; margin-right: 10px;">
@@ -1092,11 +1096,13 @@
           </p>
           The foot tracker consists of 2 ultrasonic sensors. Tilting the foot at opposite angles controls jumping (space bar) and crouching (shift key).
           Rest position indicates no movement.
+          <br>
           <p>
           <img src="./assets/images/project-biogaming3.jpg" alt="biogaming_3" style="width:300px;">
           </p>
           With a total of 4 sensors, we achieved 13 distinct controls of the keyboard and mouse.
           In class competition, our team won the Minecraft obstacle course using this biogaming controller! Below is a demo of Minecraft control.
+          <br>
           <p>
           <video width="300" controls muted>
             <source src="./assets/images/vdo-biogaming.mp4" type="video/mp4">
@@ -1154,16 +1160,16 @@
             Circuit diagram for ECG amplifier
           </p>
           <img src="./assets/images/project-ecg3.jpg" alt="ecg_3" style="width:500px;">
-
+          <br>
           <p>
             Circuit diagram for QRS detection
           </p>
           <img src="./assets/images/project-ecg4.jpg" alt="ecg_4" style="width:500px;">
-
+          <br>
           <p>
             Recording my own ECG signal with oscilloscope!
           </p>
-          <img src="./assets/images/project-ecg.jpg" alt="ecg_1" style="width:200px;">
+          <img src="./assets/images/project-ecg.jpg" alt="ecg_1" style="width:250px;">
         </section>
 
       </article>
