--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-egc2.jpg" alt="egc_2" loading="lazy">
+                  <img src="./assets/images/project-ecg2.jpg" alt="ecg_2" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">ECG Circuit</h3>
+                <h3 class="project-title">ECG Amplifier Circuit</h3>
 
                 <p class="project-category">Breadboard a circuit to ampliify and filter ECG signal</p>
 
@@ -656,12 +656,7 @@
 
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
-            <ion-item>
-              <ion-label position="floating"><ion-icon name="arrow-back-outline"></ion-icon> Back to Projects</ion-label>
-            </ion-item>
-            <!-- <ion-icon name="arrow-back-outline" style="font-size:30px;"></ion-icon>
-            <h4 style="display:inline-block; margin-left:10px;">Back to Projects</h4> -->
-            
+            <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
           </a>
           <h2 class="h2 article-title">SensoPatch</h2>
         </header>
@@ -792,7 +787,6 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
-            <h5>Back to Projects</h5>
           </a>
           <h2 class="h2 article-title">Quadcopter Flight Control</h2>
         </header>
@@ -834,11 +828,11 @@
         </span>
         <br>
         <section class="about-text">
-          Short flight demo
+          Short flight demo<br>
           <video width="300" controls autoplay muted>
             <source src="./assets/images/vdo-copter2.mp4" type="video/mp4">
           </video>
-          Example of the real-time IMU data on the web server
+          Example of the real-time IMU data on the web server<br>
         <video width="640" controls autoplay muted>
           <source src="./assets/images/vdo-copter.mp4" type="video/mp4">
         </video>
@@ -857,7 +851,6 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
-            <h5>Back to Projects</h5>
           </a>
           <h2 class="h2 article-title">The Wizard Game</h2>
         </header>
@@ -922,7 +915,7 @@
             <h3 class="h3 proj-skills-item-title">Design</h3>
             <section class="about-text">
                 The circuit consists of flip-flops, combinatorial logic, MUX, decoder, counter, timer chip,
-                7-segment displays for timer and mana levels, buttons for 3 actions, and reset button.
+                7-segment displays for timer and mana levels, buttons for 3 actions, and reset button.<br>
                 <p>
                   Circuit Simulation
                   <br>
@@ -959,7 +952,6 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
-            <h5>Back to Projects</h5>
           </a>
           <h2 class="h2 article-title">Epiguard</h2>
         </header>
@@ -1040,7 +1032,6 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
-            <h5>Back to Projects</h5>
           </a>
           <h2 class="h2 article-title">Biogaming Controller</h2>
         </header>
@@ -1117,7 +1108,7 @@
 
 
       <!--
-        - #PROJECT: QUADCOPTER
+        - #PROJECT: ECG CIRCUIT
       -->
 
       <article class="portfolio" data-page="proj-ecg">
@@ -1125,7 +1116,6 @@
         <header>
           <a class="navbar-link" data-nav-link data-target="portfolio">
             <ion-icon name="arrow-back-outline" style="zoom:4.0;"></ion-icon>
-            <h5>Back to Projects</h5>
           </a>
           <h2 class="h2 article-title">ECG Amplifier Circuit</h2>
         </header>
@@ -1156,6 +1146,7 @@
 
         <section class="about-text">
           I built a breadboard circuit using op-amps, rectifier, and RC bandpass filter to amplify and filter my own ECG signal!
+          <br>
           <p>
             Circuit diagram for ECG amplifier
           </p>
