added resume pdf button

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
           <p>
             I'm a graduating senior at Johns Hopkins University, double majoring in Biomedical Engineering and Computer Engineering.
-            My passion lies in applying embedded systems to create innovative solutions in neurotechnology and medical devices.
+            My passion lies in designing embedded systems to achieve innovative solutions in neurotechnology and medical devices.
           </p>
 
           <p>
@@ -277,6 +277,13 @@
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
+
+        <a href="https://drive.google.com/file/d/1RHfdv1a7xtGfKSSLYdxY98_Nki57pazd/view?usp=sharing" target="_blank" class="form-btn">
+          <button type="button">
+            <ion-icon name="cloud-download-outline"></ion-icon>
+            <span>PDF version</span>
+          </button>
+        </a>
 
         <section class="timeline">
 
@@ -828,12 +835,15 @@
         </span>
         <br>
         <section class="about-text">
-          Short flight demo<br>
-          <video width="300" controls autoplay muted>
+          <p>Short flight demo</p>        
+          <br>
+          <video width="300" controls muted>
             <source src="./assets/images/vdo-copter2.mp4" type="video/mp4">
           </video>
-          Example of the real-time IMU data on the web server<br>
-        <video width="640" controls autoplay muted>
+          <br>
+          <p>Example of the real-time IMU data on the web server</p>
+          <br>
+        <video width="640" controls muted>
           <source src="./assets/images/vdo-copter.mp4" type="video/mp4">
         </video>
         </section>
@@ -914,8 +924,9 @@
           <p>
             <h3 class="h3 proj-skills-item-title">Design</h3>
             <section class="about-text">
+              <p>
                 The circuit consists of flip-flops, combinatorial logic, MUX, decoder, counter, timer chip,
-                7-segment displays for timer and mana levels, buttons for 3 actions, and reset button.<br>
+                7-segment displays for timer and mana levels, buttons for 3 actions, and reset button.</p><br>
                 <p>
                   Circuit Simulation
                   <br>
@@ -1145,8 +1156,9 @@
         </section>
 
         <section class="about-text">
+          <p>
           I built a breadboard circuit using op-amps, rectifier, and RC bandpass filter to amplify and filter my own ECG signal!
-          <br>
+          </p>
           <p>
             Circuit diagram for ECG amplifier
           </p>
