changed css style for pdf button

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
-        <a href="https://drive.google.com/file/d/1RHfdv1a7xtGfKSSLYdxY98_Nki57pazd/view?usp=sharing" target="_blank" class="form-btn">
+        <a href="https://drive.google.com/file/d/1RHfdv1a7xtGfKSSLYdxY98_Nki57pazd/view?usp=sharing" target="_blank" class="pdf-btn">
           <button type="button">
             <ion-icon name="cloud-download-outline"></ion-icon>
             <span>PDF version</span>
