--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link data-target="portfolio">Portfolio</button>
+            <button class="navbar-link" data-nav-link data-target="portfolio">Projects</button>
           </li>
 
           <!-- <li class="navbar-item">
@@ -283,13 +283,9 @@
           <span>PDF version</span>
         </button>
 
-        <!-- <a href="https://drive.google.com/file/d/1RHfdv1a7xtGfKSSLYdxY98_Nki57pazd/view?usp=sharing" target="_blank" class="pdf-btn">
-          <button type="button">
-            <ion-icon name="cloud-download-outline"></ion-icon>
-            <span>PDF version</span>
-          </button>
-        </a> -->
-
+        <br>
+        <br>
+        
         <section class="timeline">
 
           <div class="title-wrapper">
@@ -428,7 +424,7 @@
       <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
