--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
           <p>
             I'm a graduating senior at Johns Hopkins University, double majoring in Biomedical Engineering and Computer Engineering.
-            My passion lies in designing embedded systems to achieve innovative solutions in neurotechnology and medical devices.
+            My passion lies in designing embedded systems to achieve innovative solutions in medical devices and other technologies.
           </p>
 
           <p>
@@ -285,7 +285,7 @@
 
         <br>
         <br>
-        
+
         <section class="timeline">
 
           <div class="title-wrapper">
