--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="info-content">
           <h1 class="name" title="Yanisa Angkanapiwat (Belle)">Yanisa (Belle)<br> Angkanapiwat</h1>
 
-          <p class="title">Embedded Software Engineer</p>
+          <!-- <p class="title">Embedded Software Engineer</p> -->
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
