updated 2025 education and internship

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:yangkan1@jhu.edu" class="contact-link">yangkan1@jhu.edu</a>
+              <a href="mailto:yanisa@stanford.edu" class="contact-link">yanisa@stanford.edu</a>
             </div>
 
           </li>
@@ -164,7 +164,8 @@
           </p>
 
           <p>
-            I'm a graduating senior at Johns Hopkins University, double majoring in Biomedical Engineering and Computer Engineering.
+            I'm a 1st year master's student in Electrical Engineering at Stanford University.
+            Previously, I graduated with a double major in Biomedical Engineering and Computer Engineering from Johns Hopkins University.
             My passion lies in designing embedded systems to achieve innovative solutions in medical devices and other technologies.
           </p>
 
@@ -299,6 +300,17 @@
           <ol class="timeline-list">
 
             <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Stanford University</h4>
+
+                <span>2025 — 2027</span>
+
+                <p class="timeline-text">
+                  Master of Science in Electrical Engineering<br>
+                  <b>Research Lab:</b> Assistive Robotics and Manipulation Lab
+                </p>
+            </li>
+              
+            <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Johns Hopkins University</h4>
 
@@ -308,6 +320,7 @@
                 Bachelor of Science in Computer Engineering & Biomedical Engineering<br>
                 GPA: 3.96, Dean's List 2021 - Present<br>
                 Honors: Tau Beta Pi Engineering Honor Society<br><br>
+                <b>Research Lab:</b> Neuroengineering and Biomedical Instrumentation Lab<br>
                 <b>Relevant coursework:</b> Software Development for Real-time Embedded Systems, Machine Intelligence for Embedded Systems,
                 FPGA Synthesis Lab, Digital Signal Processing, Machine Learning for Signal Processing, Electronics Lab, Biomedical Instrumentation
               </p>
@@ -329,6 +342,20 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Embedded Software Engineer Intern, Celestica</h4>
+
+              <span>June — August 2025</span>
+
+              <p class="timeline-text">
+                - Developed a C++ driver on Linux for Analog Front End chip of FPGA-based portable ultrasound device, enabling register-level control of SPI and GPIO via PCIe.<br>
+                - Implemented secure UART with cryptographic authentication for Class II medical light therapy device (STM32), contributing to firmware in C with secure boot and update under IEC 62304 compliance.<br>
+                - Automated unit testing with GTest and GMock frameworks, abstracting hardware dependencies to achieve 100% coverage and improve system reliability.
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
