edited quadcopter description

--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
 
         <section class="about-text">
           I developed and assembled a quadcopter with brushless motors using Linux on Raspberry Pi.
-          The quadcopter streamed real-time IMU data (from Arduino via I2C), GPS, and webcam video via WiFi from Raspberry Pi to web server.
+          The quadcopter streamed real-time IMU data (from Arduino via I2C), GPS, and webcam video via WiFi from Raspberry Pi to a networked device.
         </section>
         <span>
           <img src="./assets/images/project-copter.jpg" alt="copter_1" style="width:300px; display: inline-block; margin-right: 10px;">
