--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <p>
             I'm a 1st year master's student in Electrical Engineering at Stanford University.
             Previously, I graduated with a double major in Biomedical Engineering and Computer Engineering from Johns Hopkins University.
-            My passion lies in designing embedded systems to achieve innovative solutions in medical devices and other technologies.
+            My interest lies in designing embedded systems and software to advance assistive technologies, among others!
           </p>
 
           <p>
