changed profile picture

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Yanisa Angkanapiwat (Belle)" width="80">
+          <img src="./assets/images/BelleAng.jpeg" alt="Yanisa Angkanapiwat (Belle)" width="80">
         </figure>
 
         <div class="info-content">
