updated resume and paper links

--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
           <p>
             SensoPatch is a reconfigurable, open-source tool that allows future research to conduct studies on various aspects of the optimal method of haptic feedback delivery.
             As part of the preliminary study, participants were recruited to complete blindfold discrimination and functional tasks using controlling myoelectric hand
-            via EMG and bypass prosthetic. The full details of this project can be found on the paper <a href="https://arxiv.org/abs/2409.19155" target="_blank"><b style="color: hsl(45, 100%, 72%);">CLICK HERE!</b></a>
+            via EMG and bypass prosthetic. The full details of this project can be found on the paper <a href="https://ieeexplore.ieee.org/document/10798282" target="_blank"><b style="color: hsl(45, 100%, 72%);">CLICK HERE!</b></a>
           </p>
           </section>
           <img src="./assets/images/project-senso3.jpg" alt="sensopatch_3" style="width:400px;">
